export interface localStorageModel {}
